--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-.bg-secondary, .btn-primary, .card-header {
+.bg-secondary, .bg-primary, .btn-primary, .card-header {
     background-color: #5E3023 !important;
     border: none;
     color: white;
@@ -9,6 +9,10 @@
     color: #5E3023;
     border: none;
     margin-bottom: 0.7rem;
+}
+
+#btn-cart {
+    margin: 0.7rem;
 }
 
 .navbar-brand {
@@ -31,6 +35,13 @@ body {
     margin-bottom: 0.7rem;
 }
 
+.form-select{
+    background-color: #C08552;
+    border-color: #5E3023;
+    color: #5E3023;
+    width: 20%;
+}
+
 .form-control{
     background-color: #C08552;
     border-color: #5E3023;
@@ -41,8 +52,39 @@ body {
     color: #5E3023;
 }
 
-.card-img-top{
+.custom-file-input {
+    color: #5E3023;
+}
+
+.card-img-top {
     width: 100%;  
     height: 200px; 
     object-fit: cover; 
+}
+
+.img-fluid {
+    width: 100%;  
+    height: 400px; 
+    object-fit: cover; 
+}
+
+#quantity {
+    border-radius: 5px;
+    border: none;
+    padding: 4px;
+    background-color: #DAB49D;
+    margin-bottom: 0.7rem;
+}
+
+h4, h3, h2, p, li, td, th, #quantity-label {
+    color: #FFF2E1;
+}
+
+.home {
+    display: flex;
+    flex-direction: row;
+}
+
+#row {
+    margin-right: 3rem;
 }
