--- a/public/css/map.css
+++ b/public/css/map.css
@@ -3,10 +3,18 @@
     width: 100%;
     max-width: 900px;
     margin: 0 auto;
+    height: 600px;
+    overflow: hidden;
 }
 
 .map-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
     display: block;
 }
 
@@ -19,7 +27,7 @@
     border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 2;
     cursor: pointer;
     display: flex;
     align-items: center;
