--- a/public/css/app.css
+++ b/public/css/app.css
@@ -89,7 +89,7 @@ body {
     margin-bottom: 0.7rem;
 }
 
-h4, h3, h2, p, li, td, th, #quantity-label {
+h4, h3, h2, p, td, th, #quantity-label {
     color: #FFF2E1;
 }
 
